[package]
name = "vault-inject"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

[dependencies]
structopt = "0.3.11"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
anyhow = "1.0.26"
rpassword = "4.0.5"
url = "2.1.1"
serde = "1"
serde_json = "1"
tokio = { version = "0.2.13", features = ["full"] }
futures = "0.3.4"